--- a/styles.css
+++ b/styles.css
@@ -69,9 +69,9 @@ li:nth-child(3) {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 400px;
+    height: 350px;
     background: var(--dark);
-    gap: 30px;
+    gap: 100px;
 }
 
 button {
@@ -95,4 +95,41 @@ button {
     justify-content: center;
     align-items: center;
     color: var(--white);
+}
+
+/* INFORMATION PART */
+
+.information-container {
+    height: 400px;
+}
+
+.information-header {
+    font-size: 36px;
+    font-weight: 900;
+    color: var(--dark);
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin: 40px 0;
+}
+
+.content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+.small-content {
+    width: 150px;
+    height: 250px;
+    text-align: center;
+}
+
+.window {
+    width: 150px;
+    height: 150px;
+    border: 3px solid var(--blue);
+    border-radius: 15px;
+    margin-bottom: 10px;
 }
