--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ li:nth-child(3) {
     align-items: center;
     height: 350px;
     background: var(--dark);
-    gap: px;
+    gap: 60px;
 }
 
 button {
@@ -81,6 +81,11 @@ button {
     border-radius: 5px;
     padding: 4px 16px;
     margin-top: 10px;
+    font-weight: 700;
+}
+
+button:hover {
+    cursor: pointer;
 }
 
 .left-part {
@@ -100,7 +105,7 @@ button {
 /* INFORMATION PART */
 
 .information-container {
-    height: 400px;
+    height: 380px;
 }
 
 .information-header {
@@ -150,14 +155,53 @@ button {
 }
 
 .quote-text {
-    width: 800px;
+    width: 780px;
     font-size: 36px;
     color: var(--dark);
     font-style: oblique;
+    font-weight: 100;
 }
 
 .quote-author {
     align-self: flex-end;
     font-weight: 900;
     padding-right: 20px;
+}
+
+/* CALL TO ACTION */
+
+.cta-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 250px;
+
+}
+
+.cta-content {
+    width: 800px;
+    height: 115px;
+    background: var(--blue);
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 10px;
+}
+
+.cta-text {
+    
+}
+
+.cta-main-text {
+    color: var(--white);
+    font-weight: 900;
+}
+
+.cta-subtext {
+    color: var(--white);
+    font-size: 14px;
+}
+
+.cta-button {
+    border: 3px solid white;
 }
