--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ button:hover {
 .window {
     width: 150px;
     height: 150px;
-    border: 3px solid var(--blue);
+    border: 4px solid var(--blue);
     border-radius: 15px;
     margin-bottom: 10px;
 }
@@ -188,10 +188,6 @@ button:hover {
     border-radius: 10px;
 }
 
-.cta-text {
-    
-}
-
 .cta-main-text {
     color: var(--white);
     font-weight: 900;
@@ -204,4 +200,21 @@ button:hover {
 
 .cta-button {
     border: 3px solid white;
+}
+
+/* FOOTER */
+
+.footer {
+    background: var(--dark);
+    color: var(--white);
+    height: 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer > a {
+    color: var(--white);
+    text-decoration: none;
+    font-size: 24px;
 }
